--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </main>
 
     <aside>
-      <textarea class="mensaje"></textarea>
+      <textarea class="mensaje" readonly></textarea>
       <div class="advertencia">
         <b>Ningún mensaje fué encontrado</b><br>
         Ingresa el texto que desees encriptar o desencriptar
